--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "deploy": "gh-pages -d dist",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -15,5 +16,8 @@
     "astro": "^5.16.8",
     "marked": "^17.0.1",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
