--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.1",
     "astro": "^5.16.8",
+    "katex": "^0.16.27",
     "marked": "^17.0.1",
     "sharp": "^0.34.3"
   },
